[project]
name = "diffusion-project"
version = "0.1.0"
description = "Diffusion, Text-to-Image implementation from scratch"
requires-python = ">=3.12"

dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "matplotlib",
    "opencv-python",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
